<resources>
    <string name="app_name">UjikomPwpb</string>
    <string name="splashbird">SplashBird</string>
    <string name="splashtext">SplashText</string>
    <string name="backgroundlogin">BackgroundLogin</string>
    <string name="community_report">COMMUNITY REPORT</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="let_s_start_by_getting_your_account_setup">Let’s start by getting your account setup</string>
    <string name="nik">NIK *</string>
    <string name="name">Name *</string>
    <string name="phone">Phone Number *</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="you_have_account">You have account ?</string>
    <string name="login">Login</string>
    <string name="text_respon_number">10</string>
    <string name="txt_report_number">8</string>
    <string name="name_masyarakat">Rifky Zikriansyah Budiman</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="send">Send</string>
    <string name="phone_number">081224889238</string>
    <string name="txt_phone">Phone Number</string>
    <string name="nik_number">1718117136</string>
    <string name="nick_nik">NIK</string>
    <string name="report_not_verified">Report Not Verified</string>
    <string name="txt_not_verified">2</string>
    <string name="rifkyzb">rifkyzb_</string>
    <string name="username_nick">Username</string>
    <string name="_5">5</string>
    <string name="report_process">Report Process</string>
    <string name="_3">3</string>
    <string name="report_success">Report Success</string>
    <string name="text_not_report">Saya kurang suka dengan adanya sampah sampah yang suka bertebrangan di jalan tol</string>
    <string name="text_report_process">Maaf, Stasiun Bekasi ada beberapa alat yang tak layak untuk dipakai karena sudah rusak</string>
    <string name="answer_process">Terimakasih atas laporannya, kami kaan segera mengatasi masalah tersebut</string>
    <string name="txt_report_clear">Didekat stasiun cawang ada sebuah perlintasan kereta namun tidak ada penutupnya itu snagat membahyakan</string>
    <string name="txt_answer_clear">Laporan anda sudah kami kerjakan, terima kasih atas laporannya</string>
    <string name="title_activity_home_petugas_fragment">HomePetugasFragmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login_fragment">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="report">Saya kurang suka dengan adanya sampah - sampah yang suka bertebrangan dijalan tol</string>
    <string name="email">Email *</string>
</resources>
